# ScratchPad

./: .config_tool  CMakeLists.txt  README  build.sh
src/: CMakeLists.txt  app.cmake  main.c
src/inc/: beardog_app.h  main.h
